SERVER-27649 $elemMatch serialization $regex support